Changes by Jacob Barkdull 2015-10-13
--------------------------------------------------------------------------------
* hashover.js,
  hashover/scripts/htmloutput.php

	- URL-encode URL queries as well as URLs in URL queries.
	- URL-encode page title, improves handling of Unicode page titles.


Changes by Jacob Barkdull 2015-08-23
--------------------------------------------------------------------------------
* hashover/scripts/setup.php

	- Fixed administrative login.


Changes by Jacob Barkdull 2015-08-15
--------------------------------------------------------------------------------
* hashover/scripts/writecomments.php

	- Added 5 second delay to failed comment edit or deletion.

	  This throttles login attempts by malicious users, making brute-force
	  login attempts a less viable option for attackers.

	- Two CRLF end of lines are now used in e-mail notification messages.


Changes by Jacob Barkdull 2015-08-11
--------------------------------------------------------------------------------
* hashover/api/count-link.php,
  hashover/scripts/hashover-javascript.php

	- Now taking port numbers into account for referer checking.
	- Removed unnecessary preg_match () function call.


Changes by Jacob Barkdull 2015-08-06
--------------------------------------------------------------------------------
* hashover/scripts/htmloutput.php

	- Login button no longer shown if names and/or passwords are disabled.


* hashover/scripts/writecomments.php

	- Now using proper CRLF (\r\n) for e-mail message body.

	- Check for parent comment e-mail and encryption keys before using them.

	- When editing a comment, the new comment data array is now merged with
	  the old comment data array, instead of overriding each key.


Changes by Jacob Barkdull 2015-08-02
--------------------------------------------------------------------------------
* Conform to coding standard

	- All class files now exit with a notice when executed directly.
